--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "first todo list api",
   "main": "index.js",
   "scripts": {
-    "start":"node index",
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,5 +23,8 @@
   "homepage": "https://github.com/cuissto59/todolist#readme",
   "engines": {
     "node": ">=14.18.1 || >=16.13.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.4.4"
   }
 }
