--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "first todo list api",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
+    "build":"tsc",
+    "start": "node build/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
