--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "first todo list api",
   "main": "index.js",
   "scripts": {
-    "build":"tsc",
+    "build": "tsc",
     "start": "node build/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,6 +26,7 @@
     "node": ">=14.18.1 || >=16.13.0"
   },
   "devDependencies": {
+    "@types/node": "^16.11.6",
     "typescript": "^4.4.4"
   }
 }
