--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "lint": "eslint --ext js,ts",
     "start": "node build/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,6 +28,9 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.1.0",
     "typescript": "^4.4.4"
   }
 }
